--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11241,3 +11241,13 @@ body {
   font-size: 0.75rem;
   border-radius: 0.375rem !important;
 }
+
+.rounded-circle {
+  border-radius: 50%;
+}
+
+.navbar-brand {
+  font-family: 'Roboto', sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+}
